--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "classnames": "^2.3.2",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
@@ -26,6 +27,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.6",
@@ -35,6 +37,7 @@
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
     "prisma": "^4.14.0",
+    "sass": "^1.62.1",
     "typescript": "^5.0.4"
   },
   "ct3aMetadata": {
