--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "@vercel/postgres": "^0.3.0",
     "classnames": "^2.3.2",
     "jotai": "^2.1.0",
     "next": "^13.4.2",
