--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.14.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
@@ -20,27 +21,39 @@
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
     "@vercel/postgres": "^0.3.0",
+    "class-variance-authority": "^0.6.0",
     "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
+    "immer": "^10.0.2",
     "jotai": "^2.1.0",
+    "lucide-react": "^0.240.0",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
-    "zod": "^3.21.4"
+    "tailwind-merge": "^1.13.0",
+    "tailwindcss-animate": "^1.0.5",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.16.0",
+    "@types/prettier": "^2.7.2",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
     "prisma": "^4.14.0",
     "sass": "^1.62.1",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5.0.4"
   },
   "ct3aMetadata": {
